[tool.poetry]
name = "crypto_treading"
version = "0.1.0"
description = "Projet pour tester le trading non réel avec CoinGecko et Coinbase"
authors = ["Votre nom <votre.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.0"
pandas = "1.5.0"
numpy = "1.23.4"
prophet = "^1.1"
coinbase = "^2.0.1"
matplotlib = "^3.5.1"
plotly = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"